--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-DB_NAME=qssairir_flyer_ameera
-DB_USER=qssairir_ameera
-DB_PASSWORD=Ameer@18
-DB_HOST=103.123.62.104
+DB_NAME=ameera_flyer
+DB_USER=mbstravel
+DB_PASSWORD=T@kbir99kali
+DB_HOST=217.15.175.139
 DB_DIALECT=mysql
 TOKEN_KEY=yoursecretkey
 PORT=3001
